separate plaforms and init